# simulink-blocks-in-cpp

./: .gitignore  CMakeLists.txt  README.md
src/: BasicBlock.h  CMakeLists.txt  Constant.h  FixedPointArithmetic.h  PulseGenerator.h  Ramp.h  RandomNumberGenerator.h  SineWave.h  Step.h  TransferFunction.h  sources.cpp  sources.h
test/: CMakeLists.txt  test_sources.cpp  test_step.cpp
